crates/fortitude_formatter/src/snapshots/fortitude_formatter__test__procedure-as-argument.f90.snap
---
source: fortitude/src/format.rs
expression: string
---
module test
  abstract interface
    subroutine do_nothing
    end subroutine do_nothing
  end interface
contains
  subroutine apply(f, g)
    procedure(do_nothing) :: f
    procedure(do_nothing), optional :: g
    call f()
  end subroutine apply
end module test
