crates/fortitude_formatter/src/snapshots/fortitude_formatter__test__semicolon-in-interface.f90.snap
---
source: crates/fortitude_formatter/src/lib.rs
expression: string
snapshot_kind: text
---
interface operator(+);
  module procedure test_plus
  ;
end interface
